package com.irina.myfirstgame.objects;

import com.irina.myfirstgame.entities.wormy.Wormy;

/**
 * Item pelle permettant de creuser dans le sol.
 * <p>
 * Stub pour une fonctionnalité future de creusage.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Shovel extends Item {

    public Shovel() {
        super();
    }

    @Override
    protected void onCollect(Wormy by) {
    }
}